--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_CONNECTION_URL = "mongodb+srv://qrshare:lms2tc5UDTOTznX8@cluster0.nt381.mongodb.net/qrshare?retryWrites=true&w=majority"
 
 
-APP_BASE_URL = http://localhost:3000    
+APP_BASE_URL = https://sprightly-cascaron-e2f923.netlify.app/ 
 ALLOWED_CLIENTS = http://localhost:3000, http://localhost:3001
