--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MONGO_CONNECTION_URL = "mongodb+srv://qrshare:lms2tc5UDTOTznX8@cluster0.nt381.mo
 
 
 APP_BASE_URL = http://localhost:3000
-ALLOWED_CLIENTS = http://localhost:3000, http://localhost:3001
+ALLOWED_CLIENTS = 
